[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["zhaowanpeng <1124619676@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "0.27.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
dirty-equals = "^0.7.1.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
