[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["zhaowanpeng <1124619676@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
starlette = "0.27.0"
pydantic = "2.6.4"
uvicorn = "0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
